
	* t/GtkPaperSize.t
	* xs/GtkPaperSize.xs: Wrap gtk_paper_size_new_from_key_file,
	gtk_paper_size_to_key_file, and gtk_paper_size_get_paper_sizes.

	* t/GtkPrintSettings.t
	* xs/GtkPrintSettings.xs: Wrap gtk_print_settings_new_from_file,
	gtk_print_settings_to_file, gtk_print_settings_new_from_key_file,
	and gtk_print_settings_to_key_file.  Also fix the test fail to
	actually run any tests.

2007-06-12	kaffeetisch

	* t/PangoLayout.t
	* xs/PangoLayout.xs: Add support for the new PangoLogAttr property
	is_expandable_space.

	* t/GtkAction.t
	* xs/GtkAction.xs: Wrap gtk_action_create_menu.

	* t/GtkEntry.t
	* xs/GtkEntry.xs: Wrap gtk_entry_set_cursor_hadjustment and
	gtk_entry_get_cursor_hadjustment.

	* t/GtkEntryCompletion.t
	* xs/GtkEntryCompletion.xs: Wrap
	gtk_entry_completion_set_inline_selection,
	gtk_entry_completion_get_inline_selection, and
	gtk_entry_completion_get_completion_prefix.

	* t/01.GtkWindow.t
	* xs/GtkWindow.xs: Wrap gtk_window_set_startup_id,
	gtk_window_set_opacity, and gtk_window_get_opacity.

2007-04-04  Emmanuele Bassi  <ebassi@gnome.org>

	* xs/GtkAboutDialog.xs: Add a note about the order of the
	webmail and email properties and the url and email hook
	functions. (#425006)

2007-03-25	kaffeetisch

	* maps-2.12
	* xs_files-2.12
	* t/GtkTooltip.t
	* xs/GtkTooltip.xs: Wrap the new GtkTooltip API.

2007-03-17	kaffeetisch

	* t/GdkEvent.t
	* xs/GdkEvent.xs: Wrap gdk_event_request_motions.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Wrap gtk_widget_set_tooltip_window,
	gtk_widget_get_tooltip_window, and
	gtk_widget_trigger_tooltip_query.

2007-03-17	kaffeetisch

	* t/GtkAccelLabel.t
	* t/GtkBox.t
	* t/GtkButtonBox.t
	* t/GtkCheckButton.t
	* t/GtkCheckMenuItem.t
	* t/GtkListStore.t
	* t/GtkRadioMenuItem.t
	* t/GtkTable.t
	* t/GtkTextTag.t
	* t/GtkTreeSelection.t: Remove the -noinit option for tests which
	now need an initialized gtk+.

2007-03-17	kaffeetisch

	* xs/GtkTextBufferRichText.xs: Patch from Mario Fischer fixes a